--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "bootstrap": "^4.0.0-alpha.6",
+    "chart.js": "^2.6.0",
     "core-js": "^2.4.1",
+    "jquery": "^2.2.4",
+    "ng2-bootstrap": "^1.6.3",
+    "ng2-charts": "^1.6.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
